@@ -4073,6 +4073,8 @@ decltype (g({parm#1}, {})) f1<int>(int)
 _Z2f1IiEDTnw_T_ilEES0_
 decltype (new int{}) f1<int>(int)
 --format=gnu-v3
+_Zli2_wPKc
+operator"" _w(char const*)
 _Z1fIiEDTnw_Dapifp_EET_
 decltype (new auto({parm#1})) f<int>(int)
 --format=gnu-v3
