@@ -1,3 +1,8 @@
+2012-03-22  Jason Merrill  <jason@redhat.com>
+
+	* cp-demangle.c (cplus_demangle_operators): Add li.
+	(d_unqualified_name): Handle it specially.
+
 2012-03-22  Release Manager
 
 	* GCC 4.7.0 released.
